test/spec_vectors/simd_i8x16_arith2/fail/module_15.wat
(module (func $i8x16.min_s-arg-empty (result v128) (i8x16.min_s)))